--- a/index.html
+++ b/index.html
@@ -1,13 +1,49 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-</body>
+    <!-- Google Fonts  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Fontawsome  -->
+    <link rel="stylesheet" href="css/all.min.css" />
+
+    <!-- normalize file  -->
+    <link rel="stylesheet" href="css/normalize.css" />
+
+    <!-- custome css file  -->
+    <link rel="stylesheet" href="css/index.css" />
+    <title>Sparkle</title>
+  </head>
+  <body>
+    <header class="header" id="header">
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="#services" class="nav__link">Services</a>
+          </li>
+          <li class="nav__item">
+            <a href="#portfolio" class="nav__link">Portfolio</a>
+          </li>
+          <li class="nav__item">
+            <a href="#team" class="nav__link">Team</a>
+          </li>
+          <li class="nav__item">
+            <a href="#footer" class="nav__link">Links</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
