--- a/index.html
+++ b/index.html
@@ -28,22 +28,35 @@
   </head>
   <body>
     <header class="header" id="header">
-      <nav class="nav">
-        <ul class="nav__list">
-          <li class="nav__item">
-            <a href="#services" class="nav__link">Services</a>
-          </li>
-          <li class="nav__item">
-            <a href="#portfolio" class="nav__link">Portfolio</a>
-          </li>
-          <li class="nav__item">
-            <a href="#team" class="nav__link">Team</a>
-          </li>
-          <li class="nav__item">
-            <a href="#footer" class="nav__link">Links</a>
-          </li>
-        </ul>
+      <div class="overlay"></div>
+      <nav class="nav" id="nav">
+        <div class="container">
+          <div class="nav__top" >
+            <img class="nav__img" src="images/logo.png" alt="image" />
+            <i class="fa-solid fa-bars nav__icon" id="nav__icon"></i>
+          </div>
+          <ul class="nav__list" id="nav__list">
+            <li class="nav__item">
+              <a href="#header" class="nav__link">Header</a>
+            </li>
+            <li class="nav__item">
+              <a href="#services" class="nav__link">Services</a>
+            </li>
+            <li class="nav__item">
+              <a href="#portfolio" class="nav__link">Portfolio</a>
+            </li>
+            <li class="nav__item">
+              <a href="#team" class="nav__link">Team</a>
+            </li>
+            <li class="nav__item">
+              <a href="#footer" class="nav__link">Links</a>
+            </li>
+          </ul>
+        </div>
       </nav>
     </header>
+
+
+  <script src="js/index.js"></script>
   </body>
 </html>
