created the Header

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="overlay"></div>
       <nav class="nav" id="nav">
         <div class="container">
-          <div class="nav__top" >
+          <div class="nav__top">
             <img class="nav__img" src="images/logo.png" alt="image" />
             <i class="fa-solid fa-bars nav__icon" id="nav__icon"></i>
           </div>
@@ -54,9 +54,28 @@
           </ul>
         </div>
       </nav>
+
+      <div class="head">
+        <h2>DESIGN COMES O THOSE WHO WAIT</h2>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <button class="button-1">LEARN MORE</button>
+      </div>
+
+      <div class="bottom-arrow">
+        <img src="/images/logo.png" alt="img" />
+        <div class="arrows">
+          <div class="arrow">
+            <span></span>
+            <span></span>
+          </div>
+          <div class="arrow">
+            <span></span>
+            <span></span>
+          </div>
+        </div>
+      </div>
     </header>
 
-
-  <script src="js/index.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
