--- a/index.html
+++ b/index.html
@@ -75,7 +75,12 @@
         </div>
       </div>
     </header>
-
+    <div class="under_header container-flex">
+      <i class="fa-solid fa-mountain"></i>
+      <p class="col-6">
+        Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Proin eget tortor risus. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur non nulla sit amet nisl tempus.
+      </p>
+    </div>
     <script src="js/index.js"></script>
   </body>
 </html>
