--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <title>Sparkle</title>
   </head>
   <body>
+    <!-- =============== HEADER ================= -->
     <header class="header" id="header">
       <div class="overlay"></div>
       <nav class="nav" id="nav">
@@ -78,9 +79,29 @@
     <div class="under_header container-flex">
       <i class="fa-solid fa-mountain"></i>
       <p class="col-6">
-        Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Proin eget tortor risus. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur non nulla sit amet nisl tempus.
+        Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
+        nisl tempus convallis quis ac lectus. Proin eget tortor risus. Mauris
+        blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur non
+        nulla sit amet nisl tempus.
       </p>
     </div>
+    <!-- =============== HEADER ================= -->
+
+    <main>
+      <!-- =============== Services ================= -->
+      <section class="services" id="services">
+        <div class="text-head">
+          <img src="images/axes.png" alt="image" />
+          <h2>OUR SERVICES</h2>
+          <p class="col-9">
+            Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
+            nisl tempus convallis quis ac lectus. Proin eget tortor risus.
+            Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+          </p>
+        </div>
+      </section>
+      <!-- =============== Services ================= -->
+    </main>
     <script src="js/index.js"></script>
   </body>
 </html>
