created portfolio section

--- a/index.html
+++ b/index.html
@@ -99,6 +99,98 @@
             Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
           </p>
         </div>
+        <div class="cards container-grid">
+          <div>
+            <div class="card col-3">
+              <i class="fa-solid fa-print"></i>
+              <h3>GRAPHICC DESIGN</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum
+                error voluptate eos aliquid est reiciendis unde eius quas itaque
+                similique?
+              </p>
+            </div>
+            <div class="pogresses">
+              <div class="progress">
+                <div class="bar" style="width: 50%"><span>PS</span></div>
+              </div>
+              <div class="progress">
+                <div class="bar" style="width: 75%"><span>IL</span></div>
+              </div>
+              <div class="progress">
+                <div class="bar" style="width: 30%"><span>ID</span></div>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card col-3">
+              <i class="fa-solid fa-paint-roller"></i>
+              <h3>WEB DESIGN</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum
+                error voluptate eos aliquid est reiciendis unde eius quas itaque
+                similique?
+              </p>
+            </div>
+            <div class="pogresses">
+              <div class="progress">
+                <div class="bar" style="width: 90%"><span>UI</span></div>
+              </div>
+              <div class="progress">
+                <div class="bar" style="width: 99%"><span>UX</span></div>
+              </div>
+              <div class="progress">
+                <div class="bar" style="width: 70%">
+                  <span>RESPONSIVE</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card col-3">
+              <i class="fa-solid fa-display"></i>
+              <h3>WEB DEVELOPMENT</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum
+                error voluptate eos aliquid est reiciendis unde eius quas itaque
+                similique?
+              </p>
+            </div>
+            <div class="pogresses">
+              <div class="progress">
+                <div class="bar" style="width: 80%"><span>HTML</span></div>
+              </div>
+              <div class="progress">
+                <div class="bar" style="width: 87%"><span>CSS</span></div>
+              </div>
+              <div class="progress">
+                <div class="bar" style="width: 81%"><span>JS</span></div>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card col-3">
+              <i class="fa-solid fa-mobile-screen-button"></i>
+              <h3>APP DEVEELOPMENT</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cum
+                error voluptate eos aliquid est reiciendis unde eius quas itaque
+                similique?
+              </p>
+            </div>
+            <div class="pogresses">
+              <div class="progress">
+                <div class="bar" style="width: 90%"><span>C++</span></div>
+              </div>
+              <div class="progress">
+                <div class="bar" style="width: 95%"><span>JAVA</span></div>
+              </div>
+              <div class="progress">
+                <div class="bar" style="width: 98%"><span>SWIFT</span></div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
       <!-- =============== Services ================= -->
     </main>
