created under services section

--- a/index.html
+++ b/index.html
@@ -192,6 +192,35 @@
           </div>
         </div>
       </section>
+
+      <div class="under_services">
+        <div class="container-grid">
+          <div class="card">
+            <h3>
+              694
+            </h3>
+            <p>COMPLETED DESIGN</p>
+          </div>
+          <div class="card">
+            <h3>
+              324
+            </h3>
+            <p>PAGES CREATED</p>
+          </div>
+          <div class="card">
+            <h3>
+              134
+            </h3>
+            <p>PAGES CODED</p>
+          </div>
+          <div class="card">
+            <h3>
+              27
+            </h3>
+            <p>APPS FINISHING</p>
+          </div>
+        </div>
+      </div>
       <!-- =============== Services ================= -->
     </main>
     <script src="js/index.js"></script>
