Created over_portfolio section

--- a/index.html
+++ b/index.html
@@ -222,6 +222,32 @@
         </div>
       </div>
       <!-- =============== Services ================= -->
+
+      <!-- =============== Portfolio ================= -->
+      <section class="portfolio" id="portfolio">
+        <div class="text-head">
+          <img src="images/axes.png" alt="image" />
+          <h2>OUR PORTFOLIO</h2>
+          <p class="col-9">
+            Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
+            nisl tempus convallis quis ac lectus. Proin eget tortor risus.
+            Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+          </p>
+        </div>
+          <div class="over_portfolio container-flex">
+            <div>
+              <h3>GRAPHIC</h3>
+              <h3>WEB</h3>
+            </div>
+            <div><img src="images/logo_dark.png" alt="image"></div>
+            <div>
+              <h3>DEVELOPER</h3>
+              <h3>APP</h3>
+            </div>
+          </div>
+      </section>
+      <!-- =============== Portfolio ================= -->
+
     </main>
     <script src="js/index.js"></script>
   </body>
