update portfolio section

--- a/index.html
+++ b/index.html
@@ -196,27 +196,19 @@
       <div class="under_services">
         <div class="container-grid">
           <div class="card">
-            <h3>
-              694
-            </h3>
+            <h3>694</h3>
             <p>COMPLETED DESIGN</p>
           </div>
           <div class="card">
-            <h3>
-              324
-            </h3>
+            <h3>324</h3>
             <p>PAGES CREATED</p>
           </div>
           <div class="card">
-            <h3>
-              134
-            </h3>
+            <h3>134</h3>
             <p>PAGES CODED</p>
           </div>
           <div class="card">
-            <h3>
-              27
-            </h3>
+            <h3>27</h3>
             <p>APPS FINISHING</p>
           </div>
         </div>
@@ -224,7 +216,7 @@
       <!-- =============== Services ================= -->
 
       <!-- =============== Portfolio ================= -->
-      <section class="portfolio" id="portfolio">
+      <section id="portfolio">
         <div class="text-head">
           <img src="images/axes.png" alt="image" />
           <h2>OUR PORTFOLIO</h2>
@@ -234,20 +226,64 @@
             Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
           </p>
         </div>
-          <div class="over_portfolio container-flex">
-            <div>
-              <h3>GRAPHIC</h3>
-              <h3>WEB</h3>
-            </div>
-            <div><img src="images/logo_dark.png" alt="image"></div>
-            <div>
-              <h3>DEVELOPER</h3>
-              <h3>APP</h3>
-            </div>
+        <div class="over_portfolio container-flex">
+          <div>
+            <h3>GRAPHIC</h3>
+            <h3>WEB</h3>
           </div>
+          <div><img src="images/logo_dark.png" alt="image" /></div>
+          <div>
+            <h3>DEVELOPER</h3>
+            <h3>APP</h3>
+          </div>
+        </div>
+        <div class="portfolio">
+          <div class="img" data-desc="
+            DOE BRANDING
+            Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
+            nisl tempus convallis quis ac.
+          ">
+            <img src="images/portfolio_1.jpg" alt="img" />
+          </div>
+          <div class="img" data-desc="
+            DOE BRANDING
+            Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
+            nisl tempus convallis quis ac.
+          ">
+            <img src="images/portfolio_2.jpg" alt="img" />
+          </div>
+          <div class="img" data-desc="
+            DOE BRANDING
+            Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
+            nisl tempus convallis quis ac.
+          ">
+            <img src="images/portfolio_3.jpg" alt="img" />
+          </div>
+          <div class="img" data-desc="
+            DOE BRANDING
+            Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
+            nisl tempus convallis quis ac.
+          ">
+            <img src="images/portfolio_4.jpg" alt="img" />
+          </div>
+          <div class="img" data-desc="
+            DOE BRANDING
+            Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
+            nisl tempus convallis quis ac.
+          ">
+            <img src="images/portfolio_5.jpg" alt="img" />
+          </div>
+          <div class="img" data-desc="
+            DOE BRANDING
+            Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
+            nisl tempus convallis quis ac.
+          ">
+            <img src="images/portfolio_6.jpg" alt="img" />
+          </div>
+        </div>
+        <button class="button-1">LIKE WHAT YOU SEE!</button>
       </section>
       <!-- =============== Portfolio ================= -->
-
     </main>
     <script src="js/index.js"></script>
   </body>
