created video section

--- a/index.html
+++ b/index.html
@@ -283,6 +283,11 @@
         </div>
         <button class="button-1">LIKE WHAT YOU SEE!</button>
       </section>
+
+      <div class="video">
+        <video src="images/video.mp4" autoplay loop playsinline></video>
+        <button class="button-2">VIEW OUR VIDEO</button>
+      </div>
       <!-- =============== Portfolio ================= -->
     </main>
     <script src="js/index.js"></script>
