--- a/index.html
+++ b/index.html
@@ -289,6 +289,43 @@
         <button class="button-2">VIEW OUR VIDEO</button>
       </div>
       <!-- =============== Portfolio ================= -->
+
+      <!-- =============== OUR TEAM ================= -->
+      <section class="our_team" id="team">
+        <div class="text-head">
+          <img src="images/axes.png" alt="image" />
+          <h2>OUR TEAM</h2>
+          <p class="col-9">
+            Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
+            nisl tempus convallis quis ac lectus. Proin eget tortor risus.
+            Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+          </p>
+        </div>
+        <div class="cards container-grid">
+          <div data-name="JOHN DOE" class="card">
+            <img src="images/our_team_1.jpg" alt="image">
+            <p>Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
+              nisl tempus convallis quis ac lectus.</p>
+          </div   >
+          <div data-name="JOHN DOE" class="card">
+            <img src="images/our_team_2.jpg" alt="image">
+            <p>Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
+              nisl tempus convallis quis ac lectus.</p>
+          </div>
+          <div data-name="JOHN DOE" class="card">
+            <img src="images/our_team_3.jpg" alt="image">
+            <p>Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
+              nisl tempus convallis quis ac lectus.</p>
+          </div>
+          <div data-name="JOHN DOE" class="card">
+            <img src="images/our_team_4.jpg" alt="image">
+            <p>Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
+              nisl tempus convallis quis ac lectus. </p>
+          </div>
+        </div>
+      </section>
+      <!-- =============== OUR TEAM ================= -->
+
     </main>
     <script src="js/index.js"></script>
   </body>
