created under_team section(Initial version)

--- a/index.html
+++ b/index.html
@@ -324,6 +324,33 @@
           </div>
         </div>
       </section>
+      <div id="under_team">
+        <div class="under_team ">
+          <div class="container-flex">
+            <div class="item">
+              <p>Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
+                nisl tempus convallis quis ac lectus. Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
+                nisl tempus convallis quis ac lectus. Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
+                nisl tempus convallis quis ac lectus.</p>
+              <div class="text">
+                <p>Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
+                  nisl tempus convallis quis ac lectus.nisl tempus convallis quis ac lectus.
+                  nisl tempus convallis .</p>
+                <h5>JOHN DOE SEO</h5>
+              </div>
+            </div>
+            <div class="item">
+              <img src="images/under_our_team.jpg">
+              <div class="text">
+                <p>Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
+                  nisl tempus convallis quis ac lectus.nisl tempus convallis quis ac lectus.
+                  nisl tempus convallis .</p>
+                <h5>JOHN DOE SEO</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <!-- =============== OUR TEAM ================= -->
 
     </main>
