update under_team section

--- a/index.html
+++ b/index.html
@@ -324,10 +324,9 @@
           </div>
         </div>
       </section>
-      <div id="under_team">
-        <div class="under_team ">
+        <div class="under_team" id="under_team">
           <div class="container-flex">
-            <div class="item">
+            <div class="item" id="item">
               <p>Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
                 nisl tempus convallis quis ac lectus. Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
                 nisl tempus convallis quis ac lectus. Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
@@ -350,7 +349,6 @@
             </div>
           </div>
         </div>
-      </div>
       <!-- =============== OUR TEAM ================= -->
 
     </main>
