created the footer

--- a/index.html
+++ b/index.html
@@ -238,46 +238,64 @@
           </div>
         </div>
         <div class="portfolio">
-          <div class="img" data-desc="
+          <div
+            class="img"
+            data-desc="
             DOE BRANDING
             Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
             nisl tempus convallis quis ac.
-          ">
+          "
+          >
             <img src="images/portfolio_1.jpg" alt="img" />
           </div>
-          <div class="img" data-desc="
+          <div
+            class="img"
+            data-desc="
             DOE BRANDING
             Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
             nisl tempus convallis quis ac.
-          ">
+          "
+          >
             <img src="images/portfolio_2.jpg" alt="img" />
           </div>
-          <div class="img" data-desc="
+          <div
+            class="img"
+            data-desc="
             DOE BRANDING
             Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
             nisl tempus convallis quis ac.
-          ">
+          "
+          >
             <img src="images/portfolio_3.jpg" alt="img" />
           </div>
-          <div class="img" data-desc="
+          <div
+            class="img"
+            data-desc="
             DOE BRANDING
             Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
             nisl tempus convallis quis ac.
-          ">
+          "
+          >
             <img src="images/portfolio_4.jpg" alt="img" />
           </div>
-          <div class="img" data-desc="
+          <div
+            class="img"
+            data-desc="
             DOE BRANDING
             Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
             nisl tempus convallis quis ac.
-          ">
+          "
+          >
             <img src="images/portfolio_5.jpg" alt="img" />
           </div>
-          <div class="img" data-desc="
+          <div
+            class="img"
+            data-desc="
             DOE BRANDING
             Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
             nisl tempus convallis quis ac.
-          ">
+          "
+          >
             <img src="images/portfolio_6.jpg" alt="img" />
           </div>
         </div>
@@ -303,54 +321,124 @@
         </div>
         <div class="cards container-grid">
           <div data-name="JOHN DOE" class="card">
-            <img src="images/our_team_1.jpg" alt="image">
-            <p>Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
-              nisl tempus convallis quis ac lectus.</p>
-          </div   >
-          <div data-name="JOHN DOE" class="card">
-            <img src="images/our_team_2.jpg" alt="image">
-            <p>Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
-              nisl tempus convallis quis ac lectus.</p>
+            <img src="images/our_team_1.jpg" alt="image" />
+            <p>
+              Donec rutrum congue leo eget malesuada. Curabitur non nulla sit
+              amet nisl tempus convallis quis ac lectus.
+            </p>
           </div>
           <div data-name="JOHN DOE" class="card">
-            <img src="images/our_team_3.jpg" alt="image">
-            <p>Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
-              nisl tempus convallis quis ac lectus.</p>
+            <img src="images/our_team_2.jpg" alt="image" />
+            <p>
+              Donec rutrum congue leo eget malesuada. Curabitur non nulla sit
+              amet nisl tempus convallis quis ac lectus.
+            </p>
           </div>
           <div data-name="JOHN DOE" class="card">
-            <img src="images/our_team_4.jpg" alt="image">
-            <p>Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
-              nisl tempus convallis quis ac lectus. </p>
+            <img src="images/our_team_3.jpg" alt="image" />
+            <p>
+              Donec rutrum congue leo eget malesuada. Curabitur non nulla sit
+              amet nisl tempus convallis quis ac lectus.
+            </p>
+          </div>
+          <div data-name="JOHN DOE" class="card">
+            <img src="images/our_team_4.jpg" alt="image" />
+            <p>
+              Donec rutrum congue leo eget malesuada. Curabitur non nulla sit
+              amet nisl tempus convallis quis ac lectus.
+            </p>
           </div>
         </div>
       </section>
-        <div class="under_team" id="under_team">
-          <div class="container-flex">
-            <div class="item" id="item">
-              <p>Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
-                nisl tempus convallis quis ac lectus. Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
-                nisl tempus convallis quis ac lectus. Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
-                nisl tempus convallis quis ac lectus.</p>
-              <div class="text">
-                <p>Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
-                  nisl tempus convallis quis ac lectus.nisl tempus convallis quis ac lectus.
-                  nisl tempus convallis .</p>
-                <h5>JOHN DOE SEO</h5>
-              </div>
+      <div class="under_team" id="under_team">
+        <div class="container-flex">
+          <div class="item" id="item">
+            <p>
+              Donec rutrum congue leo eget malesuada. Curabitur non nulla sit
+              amet nisl tempus convallis quis ac lectus. Donec rutrum congue leo
+              eget malesuada. Curabitur non nulla sit amet nisl tempus convallis
+              quis ac lectus. Donec rutrum congue leo eget malesuada. Curabitur
+              non nulla sit amet nisl tempus convallis quis ac lectus.
+            </p>
+            <div class="text">
+              <p>
+                Donec rutrum congue leo eget malesuada. Curabitur non nulla sit
+                amet nisl tempus convallis quis ac lectus.nisl tempus convallis
+                quis ac lectus. nisl tempus convallis .
+              </p>
+              <h5>JOHN DOE SEO</h5>
             </div>
-            <div class="item">
-              <img src="images/under_our_team.jpg">
-              <div class="text">
-                <p>Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet
-                  nisl tempus convallis quis ac lectus.nisl tempus convallis quis ac lectus.
-                  nisl tempus convallis .</p>
-                <h5>JOHN DOE SEO</h5>
-              </div>
+          </div>
+          <div class="item">
+            <img src="images/under_our_team.jpg" />
+            <div class="text">
+              <p>
+                Donec rutrum congue leo eget malesuada. Curabitur non nulla sit
+                amet nisl tempus convallis quis ac lectus.nisl tempus convallis
+                quis ac lectus. nisl tempus convallis .
+              </p>
+              <h5>JOHN DOE SEO</h5>
             </div>
           </div>
         </div>
+      </div>
       <!-- =============== OUR TEAM ================= -->
 
+      <!-- =============== OUR TEAM ================= -->
+      <footer id="footer">
+        <div class="container-flex">
+          <div class="text">
+            <div>
+              <img src="images/logo.png" />
+              <p>
+                Donec rutrum congue leo eget malesuada. Curabitur non nulla sit
+                amet nisl tempus convallis quis ac lectus.
+              </p>
+            </div>
+            <div>
+              <h5>created by:<span> Ahmed</span> Mahmoud Saeed</h5>
+              <span>&copy; 2017 - lectus</span>
+            </div>
+          </div>
+          <div class="links">
+            <h5>Links</h5>
+            <div>
+              <a href="#">Home</a>
+              <a href="#service">Our Services</a>
+              <a href="#portfolio">Portfolio</a>
+              <a href="#portfolio">Testimonials</a>
+              <a href="#portfolio">Support</a>
+              <a href="#our_team">Teams and Condition</a>
+            </div>
+          </div>
+          <div class="about_us">
+            <h5>About Us</h5>
+            <div>
+              <a href="#">Sign In</a>
+              <a href="#">Register</a>
+              <a href="#">About Us</a>
+              <a href="#">Blog</a>
+              <a href="#">Contact Us</a>
+            </div>
+          </div>
+          <div class="contact_us">
+            <div class="">
+              <h5>Links</h5>
+              <p>
+                Donec rutrum congue leo eget malesuada. Curabitur non null quis .
+              </p>
+            </div>
+            <button class="button-1">Saeedmhmoud109@gmail.com</button>
+            <div class="social">
+              <i class="fa-brands fa-facebook"></i>
+              <i class="fa-brands fa-square-twitter"></i>
+              <i class="fa-brands fa-github"></i>
+              <i class="fa-brands fa-square-google-plus"></i>
+            </div>
+          </div>
+        </div>
+      </footer>
+      <!-- =============== OUR TEAM ================= -->
     </main>
     <script src="js/index.js"></script>
   </body>
