solving some problems

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
 
       <div class="bottom-arrow">
-        <img src="/images/logo.png" alt="img" />
+        <img src="images/logo.png" alt="img" />
         <div class="arrows">
           <div class="arrow">
             <span></span>
@@ -246,7 +246,7 @@
             nisl tempus convallis quis ac.
           "
           >
-            <img src="images/portfolio_1.jpg" alt="img" />
+            <img src="images/Portfolio_1.jpg" alt="img" />
           </div>
           <div
             class="img"
