created dark theme in scss

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="css/index.css" />
     <title>Sparkle</title>
   </head>
-  <body>
+  <body class='dark'>
     <!-- =============== HEADER ================= -->
     <header class="header" id="header">
       <div class="overlay"></div>
