--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="css/index.css" />
     <title>Sparkle</title>
   </head>
-  <body class='dark'>
+  <body class="dar">
     <!-- =============== HEADER ================= -->
     <header class="header" id="header">
       <div class="overlay"></div>
@@ -34,7 +34,10 @@
         <div class="container">
           <div class="nav__top">
             <img class="nav__img" src="images/logo.png" alt="image" />
-            <i class="fa-solid fa-bars nav__icon" id="nav__icon"></i>
+            <div class="nav__icons">
+              <i class="fa-solid fa-toggle-off" id="toggle__icon"></i>
+              <i class="fa-solid fa-bars nav__icon" id="nav__icon"></i>
+            </div>
           </div>
           <ul class="nav__list" id="nav__list">
             <li class="nav__item">
@@ -425,7 +428,8 @@
             <div class="">
               <h5>Links</h5>
               <p>
-                Donec rutrum congue leo eget malesuada. Curabitur non null quis .
+                Donec rutrum congue leo eget malesuada. Curabitur non null quis
+                .
               </p>
             </div>
             <button class="button-1">Saeedmhmoud109@gmail.com</button>
